--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg  navbar-dark">
-        <a class="navbar-brand" href="">tindog</a>
+        <a class="navbar-brand" href="">Codeinder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,13 +38,13 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#footer">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#pricing">Pricing</a>
+              <a class="nav-link" href="#pricing">Plans</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#cta">Download</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
           </ul>
         </div>
@@ -55,12 +55,12 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting Programmers nearby!</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-img" src="images/prog11.png" alt="tinder-mockup">
         </div>
       </div>
     </div>
