--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
         <div class="col-lg-4 col-md-12 feature-box">
           <i class="fas fa-check-circle fa-4x icon"></i>
           <h3 class="feature-title">Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+          <p>So easy to use, even your non-programmer friend could do it.</p>
         </div>
 
         <div class="col-lg-4 col-md-12 feature-box">
           <i class="fas fa-bullseye fa-4x icon"></i>
           <h3 class="feature-title">Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
+          <p>We have a massive network of devs from FAANG and top startups!</p>
         </div>
 
         <div class="col-lg-4 col-md-12 feature-box">
           <i class="fas fa-heart fa-4x icon"></i>
           <h3 class="feature-title">Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
+          <p>Find the perfect programmer for your life or your money back.</p>
         </div>
       </div>
     </div>
@@ -99,121 +99,168 @@
   <section class="colored-section" id="testimonials">
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
-        <div class="carousel-item active container-fluid">
-          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-          <em>Pebbles, New York</em>
+          <div class="carousel-item active container-fluid">
+            <h2 class="testimonial-text">
+              I am no longer debugging my code alone. I have found my perfect match!.
+            </h2>
+            <img
+              class="testimonial-image"
+              src="images/prog2'.jpg"
+              alt="prog-prof"
+            />
+            <em>Riya, Banglore</em>
+          </div>
+
+          <div class="carousel-item container-fluid">
+            <h2 class="testimonial-text">
+              I always had to take help with the backend from someone, but now i don't have to worry anymore!
+            </h2>
+            <img
+              class="testimonial-image"
+              src="images/prog3.jfif"
+              alt="prog-profile"
+            />
+            <em>Sakshi, Hyderabad</em>
+          </div>
+          <div class="carousel-item container-fluid">
+            <h2 class="testimonial-text">
+              Thanks to the app now i don't have to drink coffee or debug alone!
+            </h2>
+            <img class="testimonial-image"src="images/prog4.jpg"alt="prog-profile"/>
+            <em>Hari, Hyderabad</em>
+          </div>
         </div>
-        <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
-        </div>
+
+        <a
+          class="carousel-control-prev"
+          href="#testimonial-carousel"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <!--for visually impaired <span class="sr-only">Previous</span>-->
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#testimonial-carousel"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <!--for visually impaired <span class="sr-only">Next</span>-->
+        </a>
       </div>
-      <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-
-      </a>
-      <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-
-      </a>
-    </div>
   </section>
 
 
   <!-- Press -->
 
-  <section class="colored-section" id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
-
-  </section>
+  <section id="press">
+      <h4>Devs from</h4>
+      <h6>Facebook Amazon Netflix Apple and more!</h6>
+    </section>
 
 
   <!-- Pricing -->
 
-  <section class="white-section" id="pricing">
+  <section class ="white-section" id="pricing">
 
-    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+      <h2 class="section-heading">A Plan for Every Programmer's Needs</h2>
+      <p>Simple and affordable price plans for you</p>
 
-    <div class="row">
-      <div class="pricing-column col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3>Chihuahua</h3>
+      <div class="row">
+
+        <div class="pricing-column col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Brute</h3>
+            </div>
+            <div class="card-body">
+              <h2 class="price-text">Free</h2>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <button
+                type="button"
+                class="btn btn-lg btn-block btn-outline-dark"
+              >
+                Sign Up
+              </button>
+            </div>
           </div>
+        </div>
 
-          <div class="card-body">
-            <h2 class="price-text">Free</h2>
-            <p>5 Matches Per Day</p>
-            <p>10 Messages Per Day</p>
-            <p>Unlimited App Usage</p>
-            <button type="button" class="btn btn-outline-dark btn-block">Sign Up</button>
+        <div class="pricing-column col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Optimal</h3>
+            </div>
+            <div class="card-body">
+              <h2 class="price-text">299₹/ mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <button type="button" class="btn btn-lg btn-block btn-dark">
+                Sign Up
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="pricing-column col-lg-4 col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <h3>Best!</h3>
+            </div>
+
+            <div class="card-body">
+              <h2 class="price-text">699₹/ mo</h2>
+              <p>Pirority and Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <button type="button" class="btn btn-lg btn-block btn-dark">
+                Sign Up
+              </button>
+            </div>
           </div>
         </div>
       </div>
-
-      <div class="pricing-column col-lg-4 col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3>Labrador</h3>
-          </div>
-
-          <div class="card-body">
-            <h2 class="price-text">$49 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button type="button" class="btn btn-dark btn-block">Sign Up</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="pricing-column col-lg-4">
-        <div class="card">
-          <div class="card-header">
-            <h3>Mastiff</h3>
-          </div>
-
-          <div class="card-body">
-            <h2 class="price-text">$99 / mo</h2>
-            <p>Pirority Listing</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button type="button" class="btn btn-dark btn-block">Sign Up</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
 
   <!-- Call to Action -->
 
   <section class="colored-section" id="cta">
     <div class="container-fluid">
-      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-      <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+
+      <h3 class="big-heading">Find the True Love of Your Life Today.</h3>
+      <button type="button" class=" download-button btn btn-dark btn-lg download-button">
+        <i class="fab fa-apple" aria-hidden="true"></i> Download
+      </button>
+      <button
+        type="button"
+        class=" download-button btn btn-outline-light btn-lg"
+      >
+        <i class="fab fa-google-play"></i> Download
+      </button>
     </div>
-  </section>
+    </section>
 
+    <!-- Footer -->
 
-  <!-- Footer -->
-
-  <footer class="white-section" id="footer">
-    <div class="container-fluid">
-      <i class="social-icon fab fa-twitter"></i>
-      <i class="social-icon fab fa-facebook-f"></i>
-      <i class="social-icon fab fa-instagram"></i>
-      <i class="social-icon fas fa-envelope"></i>
-      <p>© Copyright 2020 TinDog</p>
-    </div>
+    <footer class ="white-section" id="footer">
+      <div class= "container-fluid">
+      <a href="https://www.twitter.com"
+        ><i class="social-icon fab fa-twitter-square 8x"></i
+      ></a>
+      <a href="https://www.facebook.com"
+        ><i class="social-icon fab fa-facebook-square 8x"></i
+      ></a>
+      <a href="https://www.instagram.com/jayanthnaidu__"
+        ><i class="social-icon fab fa-instagram 8x"></i
+      ></a>
+      <a href="mailto:jayanth.naidu999@gmail.com"
+        ><i class="social-icon fas fa-envelope 8x"></i
+      ></a>
+      <p class="copyright">© Copyright 2021 Codeinder</p>
+      </div>
   </footer>
 
 
