--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </section>
 
     <!-- Footer -->
-
+    <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />Made with <i class="icon ion-heart"></i> by Jayanth Naidu
     <footer class ="white-section" id="footer">
       <div class= "container-fluid">
       <a href="https://www.twitter.com"
@@ -259,7 +259,6 @@
       <a href="mailto:jayanth.naidu999@gmail.com"
         ><i class="social-icon fas fa-envelope 8x"></i
       ></a>
-      <p class="copyright">© Copyright 2021 Codeinder</p>
       </div>
   </footer>
 
